Bug 38522 - address space collision error message on boot
Summary: address space collision error message on boot
Status: CLOSED CODE_FIX
Alias: None
Product: Platform Specific/Hardware
Classification: Unclassified
Component: i386 (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Bjorn Helgaas
URL:
Keywords:
Depends on:
Blocks: 36912
  Show dependency tree
 
Reported: 2011-06-29 02:28 UTC by Jools Wills
Modified: 2011-08-14 19:09 UTC (History)
6 users (show)

See Also:
Kernel Version: 3.0.0rc5
Tree: Mainline
Subsystem:
Regression: Yes


Attachments
reduce message severity (1.38 KB, patch)
2011-06-30 23:20 UTC, Bjorn Helgaas
Details | Diff
edited acpi.c (8.43 KB, text/plain)
2011-07-08 04:36 UTC, MM
Details
good-acpi.c? (8.46 KB, text/plain)
2011-07-08 08:09 UTC, MM
Details

Description Jools Wills 2011-06-29 02:28:08 UTC
With kernel 3.0.0 I am getting the following error message on boot:

[    0.818722] pci_root PNP0A08:00: address space collision: host bridge window [mem 0x000c8000-0x000dffff] conflicts with Video ROM [mem 0x000c0000-0x000cdbff]

My system is ASRock z68 Pro3 mb with i5-2500K cpu.

I have used git bisect to locate the patch which has caused the message to appear:

commit 5d94e81f69d4b1d1102d3ab557ce0a817c11fbbb
Author: Dan Williams <dan.j.williams@intel.com>
Date:   Tue Mar 8 10:36:19 2011 -0800

    x86: Introduce pci_map_biosrom()
    
    The isci driver needs to retrieve its preboot OROM image which contains
    necessary runtime parameters like platform specific sas addresses and
    phy configuration.  There is no ROM BAR associated with this area,
    instead we will need to scan legacy expansion ROM space.
    
    1/ Promote the probe_roms_32 implementation to x86-64
    2/ Add a facility to find and map an adapter rom by pci device (according to
       PCI Firmware Specification Revision 3.0)
    
    Signed-off-by: Dave Jiang <dave.jiang@intel.com>
    LKML-Reference: <20110308183226.6246.90354.stgit@localhost6.localdomain6>
    Signed-off-by: Dan Williams <dan.j.williams@intel.com>
    Signed-off-by: H. Peter Anvin <hpa@linux.intel.com>

This patch is "platform" specfic hence I have assigned this bug accordingly, however, it could be just that the acpi tables are reporting incorrect information? I don't know enough about this stuff, but I hope this is of some use.

Attached my dmesg. can provide more details as needed.
Comment 1 Rafael J. Wysocki 2011-06-29 20:36:38 UTC
First-Bad-Commit : 5d94e81f69d4b1d1102d3ab557ce0a817c11fbbb
Comment 2 Dan Williams 2011-06-29 21:40:44 UTC
Trying to gather more details.  The "Component" field says i386, but was this a 64-bit build?  Otherwise I would expect this to have been a problem before this commit because the primary change of this patch was adding probe_roms to 64-bit builds.  I wonder if that hard coded Video ROM resource needs can be sanitized against the PNP resources?
Comment 3 Jools Wills 2011-06-29 22:13:41 UTC
it was a 64bit build yes sorry. I had just looked at the folder and assumed it was relating to both 32 and 64 bit architectures. I shall leave it to the experts ;-)
Comment 4 Dan Williams 2011-06-29 22:22:04 UTC
(In reply to comment #3)
> it was a 64bit build yes sorry. I had just looked at the folder and assumed
> it
> was relating to both 32 and 64 bit architectures. I shall leave it to the
> experts ;-)

Thanks for clarifying that's an important distinction.

Want to gather a bit more information.  If you have the time I believe it would be helpful to see if the same report happens with a 32-bit kernel build.  If it does then it seems the problem is more general with this platform, if it does not then maybe there is 32-bit code that needs to be promoted to santize the pnp resources?
Comment 5 Jools Wills 2011-06-30 05:57:25 UTC
same error message on i386 kernel. No log though I'm since I couldn't boot my 64 bit system with it, but unless I did something totally wrong, then this information is correct.
Comment 6 Dan Williams 2011-06-30 21:09:30 UTC
(In reply to comment #5)
> same error message on i386 kernel.

Ok, thanks, that confirms that it is a general problem.  I chatted with Bjorn and his opinion was that as long as the platform still operates the only real problem is the severity of the log message.  Does your platform otherwise operate ok?
Comment 7 Bjorn Helgaas 2011-06-30 23:20:59 UTC
Created attachment 64102 [details]
reduce message severity

Jools, can you try this patch and confirm whether you see any other issues?  Thanks!
Comment 8 Bjorn Helgaas 2011-07-01 00:10:48 UTC
*** Bug 16497 has been marked as a duplicate of this bug. ***
Comment 9 Jools Wills 2011-07-02 09:52:40 UTC
I probably should have mentioned in the initial report that everything seemed to be fine. So yeh, machine works fine. The patch hides the message on boot. All good thanks.
Comment 10 MM 2011-07-03 22:48:53 UTC
So the OPs message was this;

pci_root PNP0A08:00: address space collision: host bridge window
[mem 0x000c8000-0x000dffff] conflicts with Video ROM [mem
0x000c0000-0x000cdbff]

And this is mine;

pci_root PNP0A08:00: address space collision: host bridge window [mem 0x000cc000-0x000cffff] conflicts with Video ROM [mem 0x000c0000-0x000ce9ff]

So will that patch be fine for me to use too?


THANKS
Comment 11 Bjorn Helgaas 2011-07-06 14:27:12 UTC
Das, yes, the patch should be fine for everybody to use.
Comment 12 MM 2011-07-06 23:15:45 UTC
Hi Bjorn,

Ok I forget some of the patch cmds, so in the source directory I can run this?


patch -p0 </path/back/to/patch


THANKS
Comment 13 MM 2011-07-07 02:57:53 UTC
The patch above failed on me;


root@slackware:/usr/src/linux-2.6.36.4# patch -p1 </home/sar/Downloads/07-bz3852
patching file arch/x86/pci/acpi.c
Hunk #1 FAILED at 246.
1 out of 1 hunk FAILED -- saving rejects to file arch/x86/pci/acpi.c.rej


THANKS
Comment 14 Bjorn Helgaas 2011-07-07 03:06:46 UTC
The patch isn't going to change any behavior for you, other than removing the error message and maybe making the boot splash screen a little prettier.  If you really need to get rid of the message, you can just apply the patch by hand, i.e., edit arch/x86/pci/acpi.c with a text editor.
Comment 15 MM 2011-07-07 05:16:27 UTC
I understand what the patch is for, but isn't the cmd if I'm in the source directory and run it;

patch -p1 </path/back/to/patch suppose to work?

I don't know what to edit if I did it by hand, just want to know if I'm running the cmd correct?

Been a while since I've patched anything and forgot the cmd...

THANKS
Comment 16 MM 2011-07-08 04:36:30 UTC
Created attachment 64932 [details]
edited acpi.c
Comment 17 MM 2011-07-08 04:37:10 UTC
Sorry forgot to make a comment but above is the edited acpi.c I changed by hand will this work now?


THANKS
Comment 18 MM 2011-07-08 08:09:57 UTC
Created attachment 64942 [details]
good-acpi.c?

Ok I did not understand patches before, the - lines which are 4 get removed is all and the + lines which are 3 replace the 4 that are removed so now I added in what I was told is a correct file.

Please tell me now if the good-acpic.c? I uploaded is good?


THANKS
Comment 19 MM 2011-07-08 09:09:04 UTC
It doesn't work I'm still getting the message in dmesg;

pci_root PNP0A08:00: ignoring host bridge window [mem 0x000cc000-0x000cffff] (conflicts with Video ROM [mem 0x000c0000-0x000ce9ff])

So should I just use "pci=nocrs"

Or can I get a working patch for 2.6.36.4?


THANKS
Comment 20 Jools Wills 2011-07-08 09:22:18 UTC
I think the devs may well be busy enough without having to tutorial users on stuff like this. Either wait for the patched kernel, apply the patch to a newer kernel, or ignore the message.
Comment 21 Rafael J. Wysocki 2011-07-11 22:36:53 UTC
On Monday, July 11, 2011, Dan Williams wrote:
> [ adding Bjorn ]
> 
> On Sun, Jul 10, 2011 at 3:38 AM, Rafael J. Wysocki <rjw@sisk.pl> wrote:
> > This message has been generated automatically as a part of a summary report
> > of recent regressions.
> >
> > The following bug entry is on the current list of known regressions
> > from 2.6.39.  Please verify if it still should be listed and let the
> tracking team
> > know (either way).
> 
> The patch from the bugzilla entry is not yet upstream.
> 
> >
> > Bug-Entry       : http://bugzilla.kernel.org/show_bug.cgi?id=38522
> > Subject         : address space collision error message on boot
> > Submitter       : Jools Wills <jools@oxfordinspire.co.uk>
> > Date            : 2011-06-29 02:28 (12 days old)
> > First-Bad-Commit:
> http://git.kernel.org/linus/5d94e81f69d4b1d1102d3ab557ce0a817c11fbbb
> 
> Per the commentary in the bugzilla this commit makes the warning
> message appear on 64-bit builds, but 32-bit has the same problem on
> affected platforms (without the commit).
> 
> Bjorn has a proposed patch [1] that just downgrades the warning since
> system operation does not appear to be affected.
> 
> --
> Dan
> 
> [1]: https://bugzilla.kernel.org/attachment.cgi?id=64102
Comment 22 Florian Mickler 2011-07-12 09:16:33 UTC
Patch: https://patchwork.kernel.org/patch/940442/
Comment 23 Bjorn Helgaas 2011-07-12 20:11:50 UTC
Sorry for the delay in responding; I was on vacation a few days.

Das, I think the file you attached in comment #18 is correct.  The line in dmesg that you mention in comment #19 is exactly what I expect.  It's merely informational; it does not mean anything is broken.  You should not need to use "pci=nocrs".
Comment 24 MM 2011-07-12 20:44:30 UTC
I tried running the patch with several different commands and it fails...

Then I edited it by hand and when I rebooted it didn't work...
Comment 25 Florian Mickler 2011-08-08 08:16:42 UTC
A patch referencing this bug report has been merged in Linux v3.1-rc1:

commit 43d786ed4df4c54cb8802a523748a7d78130a2cb
Author: Bjorn Helgaas <bhelgaas@google.com>
Date:   Sat Jul 2 10:47:12 2011 -0600

    x86/PCI: reduce severity of host bridge window conflict warnings

Note You need to log in before you can comment on or make changes to this bug.